# MagnetometerFeatureAugumentationLocation

./: CMakeLists.txt  search_parameter.py
TMP_DATA/: all_data4.csv  preprocess_data.csv
include/Extent/: CSVReader.h  FUNCTIONBASE.h  FileReader.h  JsonCodert.h  JsonObject.h  Matrix.h  MyError.h  Vector.h  Zupt.data.csv  magicmatrix.csv  matplotlib_interface.h  pinv.csv  test_main.cpp  time_stamp.h
include/OwnEdge/: DistanceEdge.cpp  DistanceEdge.h  DistanceSE3Line3D.cpp  DistanceSE3Line3D.h  Line2D.h  Line3D.h  Point2Line2D.cpp  Point2Line2D.h  Point2Line3D.h  PointonLine.h  ZoEdge.cpp  ZoEdge.h
include/ZUPT/: EKF.hpp  EXUWBPF.hpp  MYEKF.h  OriUWBPF.hpp  PDRPF.hpp  PUWBPF.hpp  RangeKF.hpp  SettingPara.h
scripts/: ImuPreprocess.py  ImuResultReader.py  JavaObtainedQuickProcess.py  MobileFileProcess.py  QucikSave.py  UwbDataPreprocess.py  newQuickSave.py
scripts/OPENSHOE/: PdrEkfPlus.py  ZUPT.py  zupt_test.py
src/: graph_build_only_corner.cpp  graph_build_test.cpp  graph_build_without_ekf.cpp
